[metadata]
name = amiga-gps-reader
version = 0.1.0
author = Jack Marsh
author_email = jackmarsh1590@gmail.com
description = Amiga application to read RTK GPS data from ZED-F9P
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/amiga-gps-reader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires =
    pyubx2
    pyserial
python_requires = >=3.7

[options.entry_points]
console_scripts =
    amigartk = main:main

